5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1679_1099.log
== TEST (2019-05-02 15:43:06) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) and (var!=var3)):
	print("Tipo de triangulo:",c)
else:
	print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:43:19) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) and (var!=var3)):
	print("Tipo de triangulo:",c)
else:
	print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:43:31) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) and (var!=var3)):
	print("Tipo de triangulo:",c)
else:
	print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:43:39) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) and (var!=var3)):
	print("Tipo de triangulo:",c)
else:
	print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:43:46) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) and (var!=var3)):
	print("Tipo de triangulo:",c)
else:
	print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:44:43) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) and (var!=var3)):
	print("Tipo de triangulo:",c)
elif((var<0) or (var2<0) or (var3<0)):
	print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:45:32) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) and (var!=var3)):
	print("Tipo de triangulo:",c)
elif((var<0) or (var2<0) or (var3<0)):
	print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:45:38) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) and (var!=var3)):
	print("Tipo de triangulo:",c)
elif((var<0) or (var2<0) or (var3<0)):
	print("Tipo de triangulo:",d)
-- EXECUTION TIME:
0.195494
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Tipo de triangulo: escaleno
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Tipo de triangulo: escaleno
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:46:26) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) and (var!=var3)):
	print("Tipo de triangulo:",c)
	elif((var<0) or (var2<0) or (var3<0)):
		print("Tipo de triangulo:",d)
-- ERROR:
File "XXXX", line 14
    elif((var<0) or (var2<0) or (var3<0)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:47:17) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var2!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) and (var!=var3)):
	print("Tipo de triangulo:",c)
	elif((var<0) or (var2<0) or (var3<0)):
		print("Tipo de triangulo:",d)
-- ERROR:
File "XXXX", line 14
    elif((var<0) or (var2<0) or (var3<0)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:47:23) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var2!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) and (var!=var3)):
	print("Tipo de triangulo:",c)
elif((var<0) or (var2<0) or (var3<0)):
		print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:47:45) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var2!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) and (var2!=var3)):
	print("Tipo de triangulo:",c)
elif((var<0) or (var2<0) or (var3<0)):
		print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:48:03) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var2!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) or (var2!=var3)):
	print("Tipo de triangulo:",c)
elif((var<0) or (var2<0) or (var3<0)):
		print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:48:10) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var2!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) or (var2!=var3)):
	print("Tipo de triangulo:",c)
elif((var<0) or (var2<0) or (var3<0)):
		print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:48:15) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var2!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) or (var2!=var3)):
	print("Tipo de triangulo:",c)
elif((var<0) or (var2<0) or (var3<0)):
		print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:48:28) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) or (var2!=var3)):
	print("Tipo de triangulo:",c)
elif((var<0) or (var2<0) or (var3<0)):
		print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:48:40) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) or (var2!=var3)):
	print("Tipo de triangulo:",c)
elif((var<0) or (var2<0) or (var3<0)):
		print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:50:33) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3) and (var2!=3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) or (var2!=var3)):
	print("Tipo de triangulo:",c)
elif((var<0) or (var2<0) or (var3<0)):
		print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:50:43) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3) and (var2!=3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) or (var2!=var3)):
	print("Tipo de triangulo:",c)
elif((var<0) or (var2<0) or (var3<0)):
		print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:51:15) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3) and (var2!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) or (var2!=var3)):
	print("Tipo de triangulo:",c)
elif((var<0) or (var2<0) or (var3<0)):
		print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:52:33) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3)) or ((var2!=var3) and (var==var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) or (var2!=var3)):
	print("Tipo de triangulo:",c)
elif((var<0) or (var2<0) or (var3<0)):
		print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:52:43) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3)) or ((var2!=var3) and (var==var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) or (var2!=var3)):
	print("Tipo de triangulo:",c)
elif((var<0) or (var2<0) or (var3<0)):
		print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:57:20) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
q=(var2+var3)
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) or (var2!=var3)):
	print("Tipo de triangulo:",c)
elif(var>=q):
		print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:58:00) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
q=(var2+var3)
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) or (var2!=var3)):
	print("Tipo de triangulo:",c)
elif(var3>=(var+var2)):
		print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:58:23) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
q=(var2+var3)
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) or (var2!=var3)):
	print("Tipo de triangulo:",c)
elif(var3>=(var+var2)):
		print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:58:28) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
q=(var2+var3)
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) or (var2!=var3)):
	print("Tipo de triangulo:",c)
elif(var3>=(var+var2)):
		print("Tipo de triangulo:",d)
-- OUTPUT:
Tipo de triangulo: escaleno
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:58:40) 
-- CODE:
var=float(input("numero:"))
var2=float(input("numero:"))
var3=float(input("numero:"))
q=(var2+var3)
a="equilatero"
b="isosceles"
c="escaleno"
d="invalido"
if((var==var2) and (var==var3)):
	print("Tipo de triangulo:",a)
elif((var==var2) and (var!=var3)):
	print("Tipo de triangulo:",b)
elif((var!=var2) or (var2!=var3)):
	print("Tipo de triangulo:",c)
elif(var3>=(var+var2)):
		print("Tipo de triangulo:",d)
-- EXECUTION TIME:
0.16442
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Tipo de triangulo: escaleno
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Tipo de triangulo: escaleno
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
